--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,9 @@
 <h1>Loudwire articles</h1>
 
 <div class="card-columns" id="articles"></div>
+
+{{>comments}}
+
+<!-- Custom Javascript -->
+<script src="https://kit.fontawesome.com/1d29697dfd.js" crossorigin="anonymous"></script>
+<script src="/js/site.js"></script>
