--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,20 +3,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title></title>
+		<title>Scrape it! for Loudwire</title>
 
 		<!-- CSS: reset.css, Bootstrap CSS, custom -->
 		<link rel="stylesheet" type="text/css" href="/css/reset.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css"/>
 		<link rel="stylesheet" type="text/css" href="/css/style.css">
 
-		<!-- Javascript libraries: jQuery, popper.js, bootstrap.js -->
+		<!-- Javascript libraries: jQuery, popper.js, bootstrap.js, Font Awesome -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-		<!-- Custom Javascript -->
-		<script src="/js/site.js"></script>
 	</head>
 
 	<body class="container">
