Still can't get comments

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -21,8 +21,8 @@
 
 			<hr class="my-4">
 
-			<div class="modal-body">
-				<form>
+			<form method="POST">
+				<div class="modal-body">
 
 					<div class="form-group">
 						<label for="comment-title" class="col-form-label">Title: </label>
@@ -39,13 +39,14 @@
 						<textarea class="form-control" id="comment-text"></textarea>
 					</div>
 					
-				</form>
-			</div>
+				</div>
 
-			<div class="modal-footer">
-				<button type="button" class="btn btn-sm btn-outline-danger" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-sm btn-primary" id="postNote-btn">Post</button>
-			</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-sm btn-outline-danger" data-dismiss="modal">Close</button>
+					<button type="submit" class="btn btn-sm btn-primary" id="postNote-btn">Post</button>
+				</div>
+
+			</form>
 
 		</div>
 	</div>
