--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,6 +10,11 @@
         <button type='button' class='btn btn-md btn-primary' id='scrape-btn'>
             Reload articles!
         </button>
+
+        <button type='button' class='btn btn-md btn-primary' id='viewSaved-btn'>
+            Your Saved Articles
+        </button>
+
         <br />
         <small class="text-muted font-italic">Created by Matt Juskiw.</small>
     </div>
@@ -18,6 +23,8 @@
 <div id="articles"></div>
 
 {{>comments}}
+
+{{>noSavedToast}}
 
 <!-- Custom Javascript -->
 <script src="https://kit.fontawesome.com/1d29697dfd.js" crossorigin="anonymous"></script>
