--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,6 +16,8 @@
         </button>
 
         <br />
+
+        {{>noSaved}}
         <small class="text-muted font-italic">Created by Matt Juskiw.</small>
     </div>
 </div>
@@ -23,8 +25,6 @@
 <div id="articles"></div>
 
 {{>comments}}
-
-{{>noSavedToast}}
 
 <!-- Custom Javascript -->
 <script src="https://kit.fontawesome.com/1d29697dfd.js" crossorigin="anonymous"></script>
